INT-feat-40a3.3: On sending fleet pages added fleet ships and (where applicable) source/target with time arraive/return

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -814,7 +814,7 @@ input[type=checkbox].ui-textfield {
 }
 
 input[type=text].coordinate {
-  max-width: 20px;
+  max-width: 3em;
   padding: 4px;
 }
 
