--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -195,11 +195,11 @@ var que_id = '{QUE_ID}';
 <div id="unit_info">
           <div id="unit_info_image_wrapper">
             <img id="unit_info_image" />
-            <div id="unit_name" class="a75"></div>
+            <div id="unit_info_name" class="a75"></div>
             <div id="unit_level" class="a75"></div>
           </div>
 <!--<div style="display: table; width: 100%;">-->
-          <div id="unit_balance" style="display:none;"></div>
+          <div id="unit_balance"></div>
           <div style="vertical-align: top; margin: 0 0.2em; " id="unit_description_wrapper">
             <!--display: block;-->
             <div id="unit_description" style="text-align: justify;"></div>
@@ -210,7 +210,7 @@ var que_id = '{QUE_ID}';
           </div>
           <div id="unit_info_extra_switch_wrapper">
             <button id="unit_info_extra_switch">
-              {L_eco_bld_unit_info_extra_show}
+              {L_eco_bld_unit_info_extra_hide}
             </button>
           </div>
 <!--</div>-->
