--- a/design/templates/OpenGame/fleet3.tpl.html
+++ b/design/templates/OpenGame/fleet3.tpl.html
@@ -1,12 +1,14 @@
 <br />
+
+<h2 class="success">{L_fl_fleet_send}</h2>
+
+<!-- INCLUDE fleet_miniatures -->
+
 <table border="0" cellpadding="0" cellspacing="1">
-  <tr><td class="c success" colspan="2">{L_fl_fleet_send}</td></tr>
   <tr><td class="c_c">{L_fl_mission}</td><td class="c_c">{mission}</td></tr>
   <tr><td class="c_c">{L_fl_dist}</td><td class="c_c">{dist}</td></tr>
   <tr><td class="c_c">{L_fl_speed}</td><td class="c_c">{speed}</td></tr>
   <tr><td class="c_c">{L_fl_deute_need}</td><td class="c_c">{deute_need}</td></tr>
-  <tr><td class="c_c">{L_fl_from}</td><td class="c_c">{from}</td></tr>
-  <tr><td class="c_c">{L_fl_dest}</td><td class="c_c">{galaxy}:{system}:{planet}</td></tr>
   <tr>
     <td class="c_c" rowspan="2">{L_fl_time_go}</td>
     <td class="c_c">{L_time_local}:&nbsp;{time_go_local}</td>
@@ -22,11 +24,11 @@
     <td class="c_c">{L_time_server}:&nbsp;{time_back}</td>
   </tr>
 
-  <tr><td class="c" colspan="2">{L_fl_title}</td></tr>
-  <!-- BEGIN ships -->
-  <tr>
-    <td class="c_c">{ships.NAME}</td>
-    <td class="c_c">{ships.COUNT}</td>
-  </tr>
-  <!-- END ships -->
+  <!--<tr><td class="c" colspan="2">{L_fl_title}</td></tr>-->
+  <!-- !BEGIN ships -->
+  <!--<tr>-->
+    <!--<td class="c_c">{ships.NAME}</td>-->
+    <!--<td class="c_c">{ships.COUNT}</td>-->
+  <!--</tr>-->
+  <!-- !END ships -->
 </table>
