--- a/design/templates/OpenGame/fleet_aks_invite.tpl.html
+++ b/design/templates/OpenGame/fleet_aks_invite.tpl.html
@@ -1,5 +1,6 @@
 <br>
 {vacation}
+
 <table border="0" cellpadding="0" cellspacing="1">
  <tr>
    <th class="c_l">{L_flt_aks_players_in_aks}</th>
@@ -26,3 +27,5 @@
    </td>
  </tr>
 </table>
+<br/>
+<!-- INCLUDE fleet_miniatures -->
