--- a/design/templates/OpenGame/fleet_javascript.tpl.html
+++ b/design/templates/OpenGame/fleet_javascript.tpl.html
@@ -17,3 +17,11 @@ jQuery.extend(language, {sys_fleet_composition: '{LA_sys_fleet_composition}', sy
 var SHIP_SPY = {D_SHIP_SPY};
 
 --></script>
+<script type="text/javascript">
+  var planet_types = {
+    <!-- BEGIN possible_planet_type_id -->
+    {possible_planet_type_id.ID}: '{possible_planet_type_id.NAME}',
+    <!-- END possible_planet_type_id -->
+  };
+  var planet_names = {};
+</script>
