--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -63,7 +63,7 @@ and (orientation : portrait) {
   top: 0;
   border: 0;
 }
-#unit_name {
+#unit_info_name {
   font-size: 1em;
   vertical-align: top;
   text-align: center;
@@ -95,9 +95,17 @@ and (orientation : portrait) {
   min-height: 12em;
 }
 
-/*  */
+#unit_miniatures_wrapper {
+  vertical-align: top;
+  height: 10em;
+  width: 10em;
+  position: relative;
+  margin: 0.2em;
+  float: left;
+}
+
 @media only screen
-and (max-width : 47.4375em) {
+and (max-width : 51.9375em) {
   /* Styles */
   #unit_table { /* 3 preview */
     width: 37em;
@@ -112,7 +120,7 @@ and (max-width : 47.4375em) {
 
 /* Desktops and laptops medium-res */
 @media only screen
-and (min-width : 47.5em) {
+and (min-width : 52em) {
   /* Styles */
   #unit_table { /* 4 preview */
     width: 48.5em;
@@ -126,7 +134,7 @@ and (min-width : 47.5em) {
 }
 
 @media only screen
-and (min-width : 56em) {
+and (min-width : 60em) {
   /* Styles */
   #unit_table { /* 5 preview */
     width: 60.5em;
@@ -134,7 +142,7 @@ and (min-width : 56em) {
 }
 
 @media only screen
-and (min-width : 65em) {
+and (min-width : 68em) {
   /* Styles */
   #unit_table { /* 6 preview */
     width: 72.5em;
@@ -145,7 +153,7 @@ and (min-width : 65em) {
 }
 
 @media only screen
-and (min-width : 74em) {
+and (min-width : 76.5em) {
   /* Styles */
   #unit_table { /* 7 preview */
     width: 84.5em;
