--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -200,12 +200,14 @@ var que_id = '{QUE_ID}';
           </div>
 <!--<div style="display: table; width: 100%;">-->
           <div id="unit_balance"></div>
-          <div style="vertical-align: top; margin: 0 0.2em; " id="unit_description_wrapper">
+          <div id="unit_description_wrapper">
             <!--display: block;-->
-            <div id="unit_description" style="text-align: justify;"></div>
-            <div id="unit_require_wrapper" style="font-size: 0.8em">
-              <div class="c_l neutral" style="text-align: left;">{L_wiki_requrements}</div>
-              <ul id="unit_require" style="overflow:hidden;"></ul>
+            <div id="unit_description_wrapper_inner">
+              <div id="unit_info_description" style="text-align: justify;"></div>
+              <div id="unit_require_wrapper" style="font-size: 0.8em">
+                <div class="c_l neutral" style="text-align: left;">{L_wiki_requrements}</div>
+                <ul id="unit_require" style="overflow:hidden;"></ul>
+              </div>
             </div>
           </div>
           <div id="unit_info_extra_switch_wrapper">
