--- a/design/templates/OpenGame/fleet_miniatures.tpl.html
+++ b/design/templates/OpenGame/fleet_miniatures.tpl.html
@@ -27,12 +27,12 @@
   </h3>
   <!-- ENDIF -->
 
-  <div style="max-width: 42em; display: table;"><!-- BEGIN ships -->
+  <div id="unit_miniatures_container"><!-- BEGIN ships -->
     <div id="unit_miniatures_wrapper">
       <img src="{dpath}gebaeude/{ships.ID}.gif" style="width: 100%; height: 100%;"/>
       <!--<img id="unit_info_image" />-->
       <div id="unit_info_name" class="a75">{ships.NAME}</div>
-      <div id="unit_level" class="a75">{ships.AMOUNT_TEXT}</div>
+      <div id="unit_info_level" class="a75">{ships.AMOUNT_TEXT}</div>
     </div>
   <!-- END ships --></div>
 <!-- END fleets -->
