--- a/skins/EpicBlue/jquery.css
+++ b/skins/EpicBlue/jquery.css
@@ -53,7 +53,7 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Tahoma, sans-serif; font-size: 11px; }
+.ui-widget { font-family: Tahoma, sans-serif; font-size: 1em; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Tahoma, sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #415680; background: #132544 url(images/ui-bg_flat_75_132544_40x100.png) 50% 50% repeat-x; color: #e6ebfb; }
