--- a/skins/EpicBlue/skin.css
+++ b/skins/EpicBlue/skin.css
@@ -17,12 +17,13 @@
 
 body, form, table, input, select {
   font-family : Tahoma, sans-serif;
-  font-size : 11px;
 }
 
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
+form, table, tr, td, input, select {
+  font-size : 1em;
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   /* Styles */
 }
 
