INT-misc-40a3.7: Better mobile browser support. Also added hack to disable Chrome Android FontBusting 'feature'

--- a/design/css/global.css
+++ b/design/css/global.css
@@ -6,6 +6,11 @@ body {
   line-height: 1.1;
 }
 
+/* Rid of annoying Chrome on Android FontBoositng featurebug */
+body * {
+  max-height: 1000000em;
+}
+
 html, body
 {
   height: 100%;
