--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -3,7 +3,8 @@
   <head>
     <base href="{D_SN_ROOT_VIRTUAL}" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
+    <meta name="viewport" content="target-densitydpi=device-dpi; width=device-width; initial-scale=0.6675" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Cache-Control" content="no-cache" />
