--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -1,6 +1,6 @@
 <h2>{PAGE_HEADER}</h2>
 
-<script type="text/javascript"><!--
+<script type="text/javascript">
 var production = Array();
 var require = Array();
 var unit_selected = null;
@@ -64,7 +64,7 @@ planet = {
 };
 
 var que_id = '{QUE_ID}';
---></script>
+</script>
 
 <script type="text/javascript" src="js/build_unit.js?{C_var_db_update}"></script>
 <script type="text/javascript"><!-- BEGIN production -->
@@ -145,7 +145,7 @@ var que_id = '{QUE_ID}';
 
 <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
 <!-- INCLUDE eco_queue -->
-
+{QUE_HAS_PLACE}
 <table class="markup">
 <tr>
   <td align="center" valign="top">
@@ -223,84 +223,77 @@ var que_id = '{QUE_ID}';
               </div>
             </div>
           </div>
-        </td>
-      </tr>
+        <!--</td>-->
+      <!--</tr>-->
 
-      <tr>
-        <td style="vertical-align: top;" class="c_c">
+      <!--<tr>-->
+        <!--<td style="vertical-align: top;" class="c_c">-->
           <form action="buildings.php" method="post" id="form_unit">
             <input type="hidden" name="mode" value="{QUE_ID}" />
             <input type="hidden" name="ally_id" value="{ALLY_ID}" />
             <input type="hidden" name="unit_id" id="unit_id" />
             <input type="hidden" name="action" />
-          <!--<table cellspacing=0 cellpadding=0 valign=top style="vertical-align: top; border: 0;" width=100% class="noborder">-->
-            <!--<tr>-->
-              <!--<td valign=top width="50%" colspan="4" class="c_c">-->
-              <!--<div>-->
-                <div id="unit_time_div" align="center">{STRING_BUILD_TIME}<span id="unit_time"></span></div>
-                <table style="font-size: {$FONT_SIZE};" id="unit_cost_table">
-                  <tr class="c_c">
-                    <th width=45px>{L_sys_resources}</th>
-                    <th width=65>{L_eco_price}</th>
-                    <th width=65>{L_eco_left}</th>
-                    <th width=65 hide_no_fleet="yes">{L_sys_fleet_and}</th>
-                  </tr>
-                  <tr id="unit_metal" class="c_r">
-                    <td width=45px class="c_c">{L_sys_metal}</td>
-                    <td id="metal_price">0</td>
-                    <td id="metal_left">0</td>
-                    <td id="metal_fleet" hide_no_fleet="yes">0</td>
-                  </tr>
-                  <tr id="unit_crystal" class="c_r">
-                    <td width=45px class="c_c">{L_sys_crystal}</td>
-                    <td id="crystal_price">0</td>
-                    <td id="crystal_left">0</td>
-                    <td id="crystal_fleet" hide_no_fleet="yes">0</td>
-                  </tr>
-                  <tr id="unit_deuterium" class="c_r">
-                    <td width=45px class="c_c">{L_sys_deuterium}</td>
-                    <td id="deuterium_price">0</td>
-                    <td id="deuterium_left">0</td>
-                    <td id="deuterium_fleet" hide_no_fleet="yes">0</td>
-                  </tr>
-                  <tr id="unit_dark_matter" class="c_r">
-                    <td width=45px class="c_c" nowrap style="font-size: 80%">{L_sys_dark_matter}</td>
-                    <td id="dark_matter_price">0</td>
-                    <td id="dark_matter_left">0</td>
-                    <td id="dark_matter_fleet" hide_no_fleet="yes">0</td>
-                  </tr>
-                </table>
-                <div id="unit_max" style="display: none;">{L_sys_maximum} <span id="unit_max_number"></span></div>
-                <div id="unit_create">
-                <!-- IF STACKABLE -->
-                  <ainput type="text" name="unit_amount" id="unit_amount" max="0"></ainput>
-                  <script type="text/javascript">
-                    sn_ainput_make_jquery();
-                  </script>
-                  <div id="unit_create_button" class="link positive unit_create">{STRING_CREATE}</div>
-                <!-- ELSE -->
-                  <div id="unit_create_button" class="link positive unit_create">
-                    {STRING_CREATE} {LA_level} <span id="unit_create_level"></span>
-                  </div>
-                </div>
-                <div id="unit_destroy" style="visibility: hidden">
-                  <div id="unit_destroy_resources">&nbsp;</div>
-                  <div id="unit_destroy_time">&nbsp;</div>
-                  <div class="link negative unit_destroy">{LA_bld_destroy} {LA_level} <span id="unit_destroy_level"></span></div>
-                <!-- ENDIF -->
-                </div>
-              <!--</div>-->
-              <!--</td>-->
-              <!--<th colspan="2" width="250px" style="max-width: 250px">-->
-              <!--<div>-->
-              <!--</div>-->
-              <!--</th>-->
-            <!--</tr>-->
-          <!--</table>-->
+            <div id="unit_cost_container"<!-- IF STACKABLE --> class="unit_create_stackable"<!-- ENDIF -->>
+              <div id="unit_time_div" align="center">{STRING_BUILD_TIME}<span id="unit_time"></span></div>
+              <table style="font-size: {$FONT_SIZE};" id="unit_cost_table">
+                <tr class="c_c">
+                  <th width=45px>{L_sys_resources}</th>
+                  <th width=65>{L_eco_price}</th>
+                  <th width=65>{L_eco_left}</th>
+                  <th width=65 hide_no_fleet="yes">{L_sys_fleet_and}</th>
+                </tr>
+                <tr id="unit_metal" class="c_r">
+                  <td width=45px class="c_c">{L_sys_metal}</td>
+                  <td id="metal_price">0</td>
+                  <td id="metal_left">0</td>
+                  <td id="metal_fleet" hide_no_fleet="yes">0</td>
+                </tr>
+                <tr id="unit_crystal" class="c_r">
+                  <td width=45px class="c_c">{L_sys_crystal}</td>
+                  <td id="crystal_price">0</td>
+                  <td id="crystal_left">0</td>
+                  <td id="crystal_fleet" hide_no_fleet="yes">0</td>
+                </tr>
+                <tr id="unit_deuterium" class="c_r">
+                  <td width=45px class="c_c">{L_sys_deuterium}</td>
+                  <td id="deuterium_price">0</td>
+                  <td id="deuterium_left">0</td>
+                  <td id="deuterium_fleet" hide_no_fleet="yes">0</td>
+                </tr>
+                <tr id="unit_dark_matter" class="c_r">
+                  <td width=45px class="c_c" nowrap style="font-size: 80%">{L_sys_dark_matter}</td>
+                  <td id="dark_matter_price">0</td>
+                  <td id="dark_matter_left">0</td>
+                  <td id="dark_matter_fleet" hide_no_fleet="yes">0</td>
+                </tr>
+              </table>
+            </div>
+            <!--<div id="unit_action_container">-->
+            <!-- IF STACKABLE -->
+              <div id="unit_create" class="unit_create_stackable">
+                <div id="unit_max">{L_sys_maximum} <span id="unit_max_number"></span></div>
+                <ainput type="text" name="unit_amount" id="unit_amount" max="0"></ainput>
+                <script type="text/javascript">
+                  sn_ainput_make_jquery();
+                </script>
+                <button id="unit_create_button" class="unit_create positive">
+                  {STRING_CREATE}
+                </button>
+              </div>
+            <!-- ELSE -->
+              <div id="unit_create" class="unit_create_level">
+                <button id="unit_create_button" class="unit_create positive">
+                  {STRING_CREATE} {LA_level} <span id="unit_create_level"></span>
+                </button>
+              </div>
+              <div id="unit_destroy" style="visibility: hidden">
+                <div id="unit_destroy_resources">&nbsp;</div>
+                <div id="unit_destroy_time">&nbsp;</div>
+                <div class="link negative unit_destroy">{LA_bld_destroy} {LA_level} <span id="unit_destroy_level"></span></div>
+              </div>
+            <!-- ENDIF -->
+            <!--</div>-->
           </form>
-          <script type="text/javascript">
-            $("#unit_create_button").button();
-          </script>
         </td>
       </tr>
 
